shindigwidget/static/css/shindigwidget.css
/* ... */
  #shindig-signup .flt, #shindig-signup-student .flt {
    /* filter (input) appearance */
    background-color: #f4f4f4;
    border: 1px inset #ccc;
    margin: 0;
    width: 100%; }
  #shindig-signup .flt_s, #shindig-signup-student .flt_s {
    /* small filter (input) appearance */
    background-color: #f4f4f4;
    border: 1px inset #ccc;
    margin: 0;
    width: 80%; }
  #shindig-signup .inf, #shindig-signup-student .inf {
    /* div containing left, middle and right divs */
    clear: both;
    width: auto;
    height: 20px;
    background: #f4f4f4;
    font-size: 11px;
    margin: 0;
    padding: 1px 3px 1px 3px;
    border: 1px solid #ccc; }
  #shindig-signup .ldiv, #shindig-signup-student .ldiv {
    /* left div */
    float: left;
    width: 30%;
    position: inherit; }
  #shindig-signup .mdiv, #shindig-signup-student .mdiv {
    /* middle div */
    float: left;
    width: 30%;
    position: inherit;
    text-align: center; }
  #shindig-signup .rdiv, #shindig-signup-student .rdiv {
    /* right div */
    float: right;
    width: 30%;
    position: inherit;
    text-align: right; }
  #shindig-signup .loader, #shindig-signup-student .loader {
    /* loader appearance */
    position: absolute;
    padding: 15px 0 15px 0;
    margin-top: 7%;
    width: 200px;
    left: 40%;
    z-index: 1000;
    font-size: 14px;
    font-weight: bold;
    border: 1px solid #666;
    background: #f4f4f4;
    text-align: center;
    vertical-align: middle; }
  #shindig-signup div.mdiv select, #shindig-signup-student div.mdiv select {
    height: 20px; }
  #shindig-signup div.inf a, #shindig-signup-student div.inf a {
    color: #CC0000; }
  #shindig-signup div.inf a:hover, #shindig-signup-student div.inf a:hover {
    text-decoration: none; }
  #shindig-signup .tot, #shindig-signup-student .tot {
    font-weight: bold; }
  #shindig-signup .even, #shindig-signup-student .even {
    background-color: #fff; }
  #shindig-signup .odd, #shindig-signup-student .odd {
    background-color: #f4f4f4; }

.shindig-legend .legend-title {
  text-align: left;
  margin-bottom: 5px;
  font-weight: bold;
  font-size: 90%; }
.shindig-legend .legend-scale ul {
  margin: 0;
  margin-bottom: 5px;
  padding: 0;
  list-style: none; }
.shindig-legend .legend-scale ul li {
  font-size: 80%;
  list-style: none;
  margin-left: 0;
  line-height: 18px;
  margin-bottom: 2px; }
.shindig-legend ul.legend-labels li span {
  display: block;
  float: left;
  height: 16px;
  width: 30px;
  margin-right: 5px;
  margin-left: 0;
  border: 1px solid #999; }
.shindig-legend .legend-source {
  font-size: 70%;
  color: #999;
  clear: both; }
.shindig-legend a {
  color: #777; }
.shindig-legend li {
  display: inline-block !important; }

#shindig-signup.form-horizontal .column-holder,
#shindig-signup-student.form-horizontal .column-holder{
    margin: 0 0 15px;
    padding: 25px 0 0;
}
.column-holder:after,
.event-holder:after{
    display: block;
    clear: both;
    content: '';
}
#shindig-signup.form-horizontal .column-holder .column-left,
#shindig-signup-student.form-horizontal .column-holder .column-left{
    width: 380px;
    float: left;
    margin: 0 30px 0 0;
}
#shindig-signup.form-horizontal .column-holder .column-right,
#shindig-signup-student.form-horizontal .column-holder .column-right{
    overflow: hidden;
}

@media only screen and (max-width: 960px){
    #shindig-signup.form-horizontal .column-holder .column-right,
    #shindig-signup-student.form-horizontal .column-holder .column-right{
        width: 380px;
        clear: both;
    }
}

#shindig-signup.form-horizontal .column-holder .control-group,
#shindig-signup-student.form-horizontal .column-holder .control-group {
    margin-bottom: 56px;
}

#shindig-signup.form-horizontal .column-holder .control-label,
#shindig-signup-student.form-horizontal .column-holder .control-label { float: left;
    width: 70px;
}

#shindig-signup.form-horizontal .column-holder .controls,
#shindig-signup-student.form-horizontal .column-holder .controls {
    margin-left: 80px;
}
#shindig-signup.form-horizontal .event-holder,
#shindig-signup-student.form-horizontal .event-holder{
    margin: -6px 40px 0 80px;
}
#shindig-signup.form-horizontal .event-holder .column-left,
#shindig-signup-student.form-horizontal .event-holder .column-left{
    min-width: 360px;
    width: 46%;
    float: left;
}
#shindig-signup.form-horizontal .event-holder .column-right,
#shindig-signup-student.form-horizontal .event-holder .column-right{
    min-width: 362px;
    width: 46%;
    float: right;
}

#shindig-signup.form-horizontal .event-holder .control-label,
#shindig-signup-student.form-horizontal .event-holder .control-label{
    width: auto;
    display: block;
    float: none;
    margin: 0 0 8px;
    text-align: left;
}
#shindig-signup.form-horizontal .event-holder .controls,
#shindig-signup-student.form-horizontal .event-holder .controls{
    margin-left: 0;
    display: block;
}

#shindig-signup input[type='date'],
#shindig-signup-student input[type='date']{
    width: 104px;
    padding: 3px;
}
#shindig-signup input[type='time'],
#shindig-signup-student input[type='time']{
    width: 63px;
    padding: 3px;
}

#shindig-signup .control-group .time-unit,
#shindig-signup-student .control-group .time-unit{
    display: inline-block;
    vertical-align: middle;
    margin: 0 0 0 7px;
}
#shindig-signup .control-group .time-unit:first-child,
#shindig-signup-student .control-group .time-unit:first-child{
    margin-left: 0;
}
#shindig-signup .control-group .time-unit .controls:after,
#shindig-signup-student .control-group .time-unit .controls:after{
    display: block;
    clear: both;
    content: '';
}
#shindig-signup .control-group .time-unit .controls .add-on,
#shindig-signup-student .control-group .time-unit .controls .add-on,
#shindig-signup .control-group .time-unit .controls input,
#shindig-signup-student .control-group .time-unit .controls input{
    float: left;
}
/* ... */

